kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: purrfectmatch-ingress
  namespace: purrfectmatch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: purrfectmatch.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: purrfectmatch-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: purrfectmatch-backend-service
                port:
                  number: 5000
